# synthetic-timeseries-generation

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: paper_audit.md
synthetic_timeseries_generation/: __init__.py  chronos_kernel_synth.py  chronos_kernels.py  cli.py  gp_kernels.py  gp_processes.py  ohlcv_adapter.py  price_models.py  synthetic_dataset.py  tsmixup.py
tests/: __init__.py  test_chronos_kernel_synth.py  test_chronos_kernels.py  test_gp_kernels.py  test_ohlcv_adapter.py  test_synthetic_dataset.py  test_tsmixup.py
